deployments/google/service.yaml

# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# The hello service provides a load-balancing proxy over the hello-app
# pods. By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: metarium
spec:
  type: LoadBalancer
  selector:
    app: metarium
  ports:
  - port: 30333
    name: "node-port"
    targetPort: 30333
  - port: 9933
    name: "rpc-port"
    targetPort: 9933
  - port: 9944
    name: "ws-port"
    targetPort: 9944
  - port: 9615
    name: "prometheus-port"
    targetPort: 9615
---
